--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2020.11.8
 chardet==3.0.4
 dandelion-eu==0.3.2
 idna==2.10
+PyAudio==0.2.11
 python-dotenv==0.15.0
 PyYAML==5.3.1
 requests==2.25.0
