--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+astroid==2.4.2
 certifi==2020.11.8
 chardet==3.0.4
 dandelion-eu==0.3.2
 idna==2.10
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 PyAudio==0.2.11
+pylint==2.6.0
 python-dotenv==0.15.0
 PyYAML==5.3.1
 requests==2.25.0
 six==1.15.0
 SpeechRecognition==3.8.1
+toml==0.10.2
 urllib3==1.26.2
+wrapt==1.12.1
